--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "vue": "latest"
   },
   "devDependencies": {
-    "sass": "^1.77.8"
+    "sass": "^1.77.8",
+    "typescript": "^5.5.4",
+    "vue-tsc": "^2.0.29"
+  },
+  "overrides": {
+    "vue": "latest"
   }
 }
